Moves coverage profile to the core module